--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -8,12 +8,13 @@ body {
   background-color: #cccccc;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin: 0 auto;
   overflow-x: hidden;
 }
 
 .main-container {
-  width: 100%;
+  width: 98%;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
