--- a/client/src/components/Nav/nav.css
+++ b/client/src/components/Nav/nav.css
@@ -1,6 +1,5 @@
 .nav-main-container {
   width: 100%;
-  height: 200px;
   background-color: aliceblue;
   position: absolute;
   top: 0;
@@ -26,4 +25,58 @@
 .logo img {
   width: 75%;
   height: auto;
+}
+
+.links {
+  width: 50%;
+  height: 80px;
+  position: absolute;
+  top: -25px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  border-radius: 30px;
+  padding-bottom: 15px;
+}
+.link-container {
+  width: fit-content;
+  height: 40px;
+}
+
+.link-container:hover {
+  color: #f57c00;
+}
+
+.links h1 {
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.active {
+  width: 100%;
+  height: 2px;
+  background-color: #f57c00;
+}
+
+.socials {
+  width: 15%;
+  height: 80px;
+  position: absolute;
+  top: -30px;
+  right: -25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  border-radius: 50px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 25px;
+}
+
+.socials img {
+  width: 45px;
+  height: auto;
+  border-radius: 100%;
 }
