--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #cccccc;
+  background-color: rgb(215, 215, 215);
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -32,7 +32,11 @@ body {
 }
 
 .oswald-font {
-  font-family: "Oswald";
+  font-family: "Oswald", sans-serif;
+}
+.oswald-thin-font {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
 }
 
 .mont-font {
@@ -44,7 +48,7 @@ body {
 }
 
 .silver-bg {
-  background-color: #cccccc;
+  background-color: rgb(215, 215, 215);
 }
 
 .white-bg {
