--- a/client/src/components/Nav/nav.css
+++ b/client/src/components/Nav/nav.css
@@ -1,11 +1,10 @@
 .nav-main-container {
   width: 100%;
-  background-color: aliceblue;
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
   z-index: 9;
 }
@@ -20,20 +19,19 @@
   position: absolute;
   top: -17px;
   left: -17px;
+  padding-left: 5px;
+  padding-bottom: 3px;
 }
 
 .logo img {
-  width: 75%;
+  width: 90px;
   height: auto;
 }
 
 .links {
   width: 50%;
   height: 80px;
-  position: absolute;
-  top: -25px;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-top: -20px;
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
@@ -61,18 +59,16 @@
 }
 
 .socials {
-  width: 15%;
-  height: 80px;
-  position: absolute;
-  top: -30px;
-  right: -25px;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
+  gap: 15px;
+  position: absolute;
+  top: -10px;
+  right: -20px;
+  background-color: #d9d9d9;
   border-radius: 50px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 25px;
+  padding: 10px 20px 10px 15px;
+  z-index: 10;
 }
 
 .socials img {
