--- a/client/src/pages/LandingPage/landingpage.css
+++ b/client/src/pages/LandingPage/landingpage.css
@@ -1,8 +1,12 @@
 .landing-page-main {
   width: 100%;
-  height: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.dummy {
+  width: 100%;
+  height: 1500px;
 }
