--- a/client/src/sections/Services/services.css
+++ b/client/src/sections/Services/services.css
@@ -1,6 +1,5 @@
 .services-main-container {
   width: 100%;
-  height: 1000px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -26,7 +25,7 @@
 
 .icons-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   gap: 20px;
   width: 90%;
 }
@@ -69,6 +68,89 @@
     transform: translateX(0);
   }
 }
+
+.vectors-info-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.vector-container {
+  width: 100%;
+  height: fit-content;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.vector-container img {
+  width: 80%;
+  height: auto;
+}
+
+.vector-title {
+  width: 80%;
+  margin-top: 40px;
+}
+.vector-title h1 {
+  font-size: clamp(2.5rem, 4vw, 4rem);
+}
+
+.vector-info {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+
+.vector-blerb {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.vector-grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  width: 90%;
+  margin-top: 30px;
+}
+
+.vector-rect {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+  margin: 0 auto;
+  transition: all 0.4s;
+}
+
+.vector-rect:hover {
+  background-color: #f57c00;
+}
+.vector-rect-inner {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+  justify-content: flex-end;
+  margin: 0 auto;
+  transition: all 0.4s;
+}
+
+.vector-rect-inner:hover {
+  background-color: #f57c00;
+}
+
 @media only screen and (max-width: 600px) {
   .icons-container {
     grid-template-columns: repeat(2, 1fr);
