--- a/client/src/sections/Services/services.css
+++ b/client/src/sections/Services/services.css
@@ -43,11 +43,13 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  padding: 20px;
 }
 
 .icon-container img {
-  width: 60%;
-  height: 60%;
+  width: 40px;
+  height: 40px;
+  margin-bottom: 10px;
 }
 
 .org-bg {
@@ -86,13 +88,15 @@
   align-items: center;
 }
 .vector-container img {
-  width: 80%;
+  width: 60%;
   height: auto;
+  margin-top: 2%;
 }
 
 .vector-title {
   width: 80%;
-  margin-top: 40px;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 .vector-title h1 {
   font-size: clamp(2.5rem, 4vw, 4rem);
@@ -113,6 +117,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2%;
 }
 
 .vector-grid-container {
@@ -151,6 +156,12 @@
   background-color: #f57c00;
 }
 
+@media only screen and (min-width: 1600px) {
+  .vectors-info-container {
+    flex-direction: row;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .icons-container {
     grid-template-columns: repeat(2, 1fr);
@@ -159,5 +170,43 @@
   .icon-container {
     width: 100%;
     height: 100%;
+  }
+
+  .vector-title {
+    width: 100%;
+  }
+
+  .vector-grid-container {
+    gap: 8px;
+    width: 95%;
+  }
+
+  .vector-title h1 {
+    font-size: 1.7rem;
+    text-align: center;
+  }
+
+  .vector-blerb {
+    text-align: center;
+    width: 95%;
+  }
+  .vector-blerb h1 {
+    font-size: 1.2rem;
+  }
+  .vector-rect {
+    justify-content: center;
+    text-align: center;
+  }
+  .vector-rect-inner {
+    justify-content: center;
+    text-align: center;
+  }
+  .vector-rect h1 {
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .vector-rect-inner h1 {
+    font-size: 1rem;
   }
 }
