--- a/client/src/components/Button/button.css
+++ b/client/src/components/Button/button.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
+  margin-top: 40px;
   border-radius: 20px;
   cursor: pointer;
   position: relative;
