--- a/client/src/sections/Services/services.css
+++ b/client/src/sections/Services/services.css
@@ -77,7 +77,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-evenly;
 }
 
 .vector-container {
@@ -164,8 +164,12 @@
     flex-direction: row;
   }
 
+  .vector-title {
+    width: 100%;
+  }
+
   .vector-container img {
-    width: 90%;
+    width: 80%;
     margin-bottom: 40px;
   }
 
@@ -181,7 +185,6 @@
 @media only screen and (max-width: 600px) {
   .services-main-container {
     height: 1305px;
-    justify-content: space-evenly;
   }
   .icons-container {
     grid-template-columns: repeat(2, 1fr);
@@ -198,6 +201,11 @@
 
   .title-2 {
     font-size: 2rem;
+  }
+
+  .vectors-info-container {
+    height: 850px;
+    background-color: aqua;
   }
 
   .vector-grid-container {
