--- a/client/src/sections/Services/services.css
+++ b/client/src/sections/Services/services.css
@@ -28,6 +28,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   gap: 20px;
+
   width: 90%;
 }
 
@@ -36,6 +37,7 @@
   height: 100%;
   display: flex;
   background-color: white;
+  border-radius: 10px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -134,6 +136,7 @@
 .vector-rect {
   width: 100%;
   height: 60px;
+  border-radius: 10px;
   display: flex;
   align-items: center;
   padding: 5px 10px;
@@ -151,6 +154,7 @@
   align-items: center;
   padding: 5px 10px;
   justify-content: flex-end;
+  border-radius: 10px;
   margin: 0 auto;
   transition: all 0.4s;
 }
@@ -198,10 +202,6 @@
 
   .title-2 {
     font-size: 2rem;
-  }
-
-  .vectors-info-container {
-    height: 850px;
   }
 
   .vector-grid-container {
