--- a/client/src/sections/Info/info.css
+++ b/client/src/sections/Info/info.css
@@ -2,7 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: flex-start;
   padding: 40px;
 }
@@ -10,15 +10,52 @@
 .info-title {
   width: 100%;
   display: flex;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .info-title h1 {
   font-size: clamp(2rem, 4vw, 5rem);
 }
 
+.info-body {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.info-body-title {
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.info-body-title h2 {
+  font-size: clamp(1.2rem, 2vw, 2rem);
+}
+
+.info-body-info p {
+  font-size: clamp(1rem, 1.5vw, 1.5rem);
+}
+
+.info-vector-container {
+  width: 40%;
+  margin: 0 auto;
+  display: flex;
+  margin-top: 50px;
+}
+.info-vector-container img {
+  width: 100%;
+}
+
 @media only screen and (max-width: 600px) {
   .info-title {
     justify-content: center;
+    text-align: center;
+  }
+
+  .info-body {
     text-align: center;
   }
 }
