--- a/client/src/sections/Projects/project.css
+++ b/client/src/sections/Projects/project.css
@@ -1,25 +1,71 @@
 .projects-main-container {
   width: 100%;
-  height: 800px;
+  display: flex;
+  margin: 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  margin-top: 100px;
+}
+.projects-inner-container {
+  width: 100%;
+  margin-top: -4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 30px;
+}
+.waves-grad {
+  width: 100%;
+  position: absolute;
+  top: -10px;
+  z-index: -1;
+}
+.waves-b-grad {
+  width: 100%;
+  position: absolute;
+  bottom: 8px;
+  z-index: -1;
+}
+
+.waves-img {
+  width: 100%;
+  margin: 0;
+}
+.waves-img img {
+  width: 100%;
+}
+
+.projects-title {
+  width: 100%;
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
+  margin-bottom: 50px;
+  text-align: center;
 }
 
-.projects-main-container::before,
-.projects-main-container::after {
-  content: "";
-  position: absolute;
+.projects-grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 50px;
   width: 100%;
-  height: 50px;
-  background-color: aqua;
 }
 
-.projects-main-container::before {
-  top: 0;
+.project-img-container {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  margin: 0 auto;
 }
-.projects-main-container::after {
-  bottom: 0;
+
+.project-img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top left;
 }
