--- a/client/src/sections/Projects/project.css
+++ b/client/src/sections/Projects/project.css
@@ -8,6 +8,7 @@
   position: relative;
   margin-top: 100px;
 }
+
 .projects-inner-container {
   width: 100%;
   margin-top: -4px;
@@ -17,12 +18,14 @@
   justify-content: flex-start;
   padding: 30px;
 }
+
 .waves-grad {
   width: 100%;
   position: absolute;
   top: -10px;
   z-index: -1;
 }
+
 .waves-b-grad {
   width: 100%;
   position: absolute;
@@ -34,6 +37,7 @@
   width: 100%;
   margin: 0;
 }
+
 .waves-img img {
   width: 100%;
 }
@@ -61,6 +65,8 @@
   height: 300px;
   display: flex;
   margin: 0 auto;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 .project-img-container img {
