--- a/client/src/sections/Projects/project.css
+++ b/client/src/sections/Projects/project.css
@@ -67,6 +67,7 @@
   margin: 0 auto;
   border-radius: 20px;
   overflow: hidden;
+  position: relative;
 }
 
 .project-img-container img {
@@ -74,4 +75,21 @@
   height: 100%;
   object-fit: cover;
   object-position: top left;
+}
+
+.dark-bg {
+  background-color: rgba(0, 0, 0, 0.848);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  transition: all 0.8s;
+}
+@media only screen and (max-width: 600px) {
+  .projects-title {
+    height: 130px;
+    justify-content: space-between;
+  }
 }
