--- a/client/src/components/Button/button.css
+++ b/client/src/components/Button/button.css
@@ -1,22 +1,41 @@
 .button-main {
-  padding: 5px 40px;
+  padding: 10px 30px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   margin-top: 40px;
   border-radius: 20px;
   cursor: pointer;
   position: relative;
   overflow: hidden;
+  border: 2px solid white;
+  color: white;
+  transition: all 0.8s;
+}
+.button-main:hover {
+  color: black;
+  filter: none;
+  border: 2px solid #f57c00;
 }
 
+.button-main img {
+  width: 60px;
+  z-index: 2;
+  transition: all 0.8s;
+}
+
+.button-main h2 {
+  line-height: 40px;
+  margin: 0;
+}
 .hover-bg {
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(#f57c00 87%, #b9700b 100%);
+  color: black;
+  background: linear-gradient(#f5f5f5 81%, #c2c2c2 97%, #8f8f8f 100%);
   transform: translateX(-100%);
   transition: transform 0.5s ease-in-out;
 }
