--- a/client/src/sections/FAQ/faq.css
+++ b/client/src/sections/FAQ/faq.css
@@ -15,3 +15,31 @@
   text-align: center;
   margin-top: 50px;
 }
+
+.faq-cards-container {
+  width: 100%;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.faq-card {
+  width: 90%;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+  border-radius: 20px;
+  margin-bottom: 30px;
+}
+
+.faq-card img {
+  width: 30px;
+  height: 30px;
+}
+
+@media only screen and (max-width: 600px) {
+}
