--- a/client/src/sections/FAQ/faq.css
+++ b/client/src/sections/FAQ/faq.css
@@ -29,11 +29,26 @@
   width: 90%;
   background-color: white;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 30px;
   border-radius: 20px;
   margin-bottom: 30px;
+  transition: all 0.8s;
+  overflow: hidden;
+}
+
+.faq-card-title {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.faq-card-info {
+  width: 100%;
+  margin-top: 30px;
 }
 
 .faq-card img {
@@ -42,4 +57,8 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .faq-card {
+    text-align: center;
+    padding: 25px;
+  }
 }
