--- a/client/src/sections/FAQ/faq.css
+++ b/client/src/sections/FAQ/faq.css
@@ -1,6 +1,5 @@
 .faq-main-container {
   width: 100%;
-  height: 800px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,6 +15,13 @@
   margin-top: 50px;
 }
 
+.faq-card-img-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
 .faq-cards-container {
   width: 100%;
   margin-top: 50px;
@@ -30,9 +36,9 @@
   background-color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 30px 30px;
   border-radius: 20px;
   margin-bottom: 30px;
   transition: all 0.8s;
@@ -47,13 +53,35 @@
 }
 
 .faq-card-info {
-  width: 100%;
-  margin-top: 30px;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  padding-top: 0; /* Starts at 0 so it doesn't push content */
+  transition: max-height 0.4s ease-in-out, opacity 0.2s ease-in-out,
+    padding-top 0.4s ease-in-out;
 }
-
 .faq-card img {
   width: 30px;
   height: 30px;
+}
+
+.faq-img {
+  width: 60%;
+  height: auto;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .faq-card-img-container {
+    flex-direction: row;
+    margin-bottom: 100px;
+  }
+
+  .faq-img {
+    width: 30%;
+    margin: 0;
+  }
 }
 
 @media only screen and (max-width: 600px) {
