--- a/client/src/components/Hamburger/hamburger.css
+++ b/client/src/components/Hamburger/hamburger.css
@@ -9,5 +9,52 @@
 .hamburger {
   width: 250px;
   height: 250px;
-  border: 2px solid black;
+}
+
+/* Lines */
+.line {
+  transition: stroke-dashoffset 0.7s ease-in-out;
+  stroke-dasharray: 80;
+  stroke-dashoffset: 0; /* Default state */
+}
+
+/* Opening animation */
+.hamburger.open .top {
+  animation: to-open-icon 1s forwards 0.4s;
+}
+.hamburger.open .middle {
+  animation: to-open-icon 1s forwards 0.2s;
+}
+.hamburger.open .bottom {
+  animation: to-open-icon 1s forwards;
+}
+
+/* Closing animation */
+.hamburger.close.start .top {
+  animation: to-close-icon 1s forwards;
+}
+.hamburger.close.start .middle {
+  animation: to-close-icon 1s forwards 0.2s;
+}
+.hamburger.close.start .bottom {
+  animation: to-close-icon 1s forwards 0.4s;
+}
+
+/* Animation Keyframes */
+@keyframes to-close-icon {
+  0% {
+    stroke-dashoffset: 0;
+  }
+  100% {
+    stroke-dashoffset: -80;
+  }
+}
+
+@keyframes to-open-icon {
+  0% {
+    stroke-dashoffset: -80;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
 }
