--- a/client/src/components/Hamburger/hamburger.css
+++ b/client/src/components/Hamburger/hamburger.css
@@ -1,59 +1,135 @@
 .ham-button {
   width: fit-content;
-  border: 3px solid black;
+  background: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
+  border: none;
 }
 
 .hamburger {
-  width: 250px;
-  height: 250px;
+  width: 60px;
+  height: 60px;
+  border: none;
 }
-
-/* Lines */
 .line {
-  transition: stroke-dashoffset 0.7s ease-in-out;
-  stroke-dasharray: 80;
-  stroke-dashoffset: 0; /* Default state */
+  transition: all 0.7s ease-in-out;
 }
 
-/* Opening animation */
+.top {
+  transition-delay: 0.4s;
+  transform-origin: 73px 40px;
+}
+
+.bottom {
+  transform-origin: 76px 63px;
+}
+
 .hamburger.open .top {
-  animation: to-open-icon 1s forwards 0.4s;
+  animation: to-close-icon-top 1s forwards;
 }
 .hamburger.open .middle {
-  animation: to-open-icon 1s forwards 0.2s;
+  animation: to-close-icon-middle 0.4s forwards;
 }
 .hamburger.open .bottom {
-  animation: to-open-icon 1s forwards;
+  animation: to-close-icon-bottom 1s forwards;
 }
 
-/* Closing animation */
-.hamburger.close.start .top {
-  animation: to-close-icon 1s forwards;
+.hamburger.close .top {
+  animation: to-open-top 2s forwards;
 }
-.hamburger.close.start .middle {
-  animation: to-close-icon 1s forwards 0.2s;
-}
-.hamburger.close.start .bottom {
-  animation: to-close-icon 1s forwards 0.4s;
+.hamburger.close .bottom {
+  animation: to-open-bottom 2s forwards;
 }
 
-/* Animation Keyframes */
-@keyframes to-close-icon {
+.hamburger.close .middle {
+  stroke-dashoffset: -80;
+  animation: to-open-middle 0.35s forwards ease-out 0.8s;
+}
+@keyframes to-close-icon-top {
   0% {
     stroke-dashoffset: 0;
   }
+  40% {
+    stroke-dashoffset: -80;
+  }
+  80% {
+    stroke-dashoffset: -80;
+    rotate: -45deg;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    rotate: -45deg;
+  }
+}
+@keyframes to-close-icon-middle {
+  0% {
+    stroke-dashoffset: 0;
+  }
+
   100% {
     stroke-dashoffset: -80;
   }
 }
 
-@keyframes to-open-icon {
+@keyframes to-close-icon-bottom {
+  0% {
+    stroke-dashoffset: 0;
+  }
+  40% {
+    stroke-dashoffset: -80;
+  }
+  60% {
+    stroke-dashoffset: -80;
+    rotate: 45deg;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    rotate: 45deg;
+  }
+}
+
+@keyframes to-open-top {
+  0% {
+    stroke-dashoffset: 0;
+    rotate: -45deg;
+  }
+  20% {
+    stroke-dashoffset: -80;
+    rotate: -45deg;
+  }
+  40% {
+    rotate: 0deg;
+    stroke-dashoffset: -80;
+  }
+  60% {
+    rotate: 0deg;
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes to-open-bottom {
+  0% {
+    stroke-dashoffset: 0;
+    rotate: 45deg;
+  }
+  20% {
+    stroke-dashoffset: -80;
+    rotate: 45deg;
+  }
+  40% {
+    rotate: 0deg;
+    stroke-dashoffset: -80;
+  }
+  60% {
+    rotate: 0deg;
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes to-open-middle {
   0% {
     stroke-dashoffset: -80;
   }
+
   100% {
     stroke-dashoffset: 0;
   }
