--- a/client/src/pages/ProjectsPage/projectspage.css
+++ b/client/src/pages/ProjectsPage/projectspage.css
@@ -23,7 +23,11 @@
   height: auto;
   border-radius: 10px;
 }
-
+.project-img-exp {
+  width: 500px;
+  height: auto;
+  border-radius: 10px;
+}
 .project-display-info {
   max-height: 0;
   opacity: 0;
@@ -31,4 +35,15 @@
   padding-top: 0;
   transition: max-height 0.4s ease-in-out, opacity 0.2s ease-in-out,
     padding-top 0.4s ease-in-out;
+}
+
+@media only screen and (max-width: 800px) {
+  .project-dis-title {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .project-dis-title > h1 {
+    margin-bottom: 20px;
+  }
 }
