--- a/client/src/SectionsProjects/ProjectDisplay/projectdisplay.css
+++ b/client/src/SectionsProjects/ProjectDisplay/projectdisplay.css
@@ -1,9 +1,11 @@
 .project-display {
-  width: 95%;
+  width: 97%;
+  height: 800px;
   margin: 0 auto;
   border-radius: 10px;
-  padding: 20px 40px;
+  padding: 20px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
@@ -20,40 +22,56 @@
   text-align: center;
 }
 .carousel {
-  width: 100%;
+  width: 70%;
   margin: 0 auto;
 }
-.project-dis-title {
-  width: 50%;
-  text-align: center;
+
+.project-display-title {
+  width: 100%;
+  height: 10%;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
-.project-dis-title > img {
-  max-width: 300px;
+.project-display-img-container {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom-left-radius: 10px;
+  overflow: hidden;
+}
+
+.project-display-img-container > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .project-display-info {
-  width: 50%;
+  width: 70%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: space-evenly;
+  border-bottom-right-radius: 10px;
 }
 
 .project-exp-info {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 5px;
-  margin-bottom: 30px;
-  margin-top: 15px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 .project-exp-info > p {
-  width: 95%;
-  margin: 0 auto;
+  width: 80%;
 }
 
 .project-exp-imgs {
@@ -65,9 +83,7 @@
 }
 
 .carousel-2 {
-  margin: 0 auto;
   width: 50%;
-  padding: 20px;
   border-radius: 10px;
 }
 
@@ -75,18 +91,7 @@
   width: 90%;
   margin: 0 auto;
 }
-.project-exp-img > img {
-  width: 100%;
-}
-.project-exp-img > h4 {
-  margin-top: 10px;
-}
 
-.end {
-  text-align: center;
-  margin: 0 auto;
-  margin-top: 30px;
-}
 .project-exp-button {
   width: 100%;
   display: flex;
@@ -94,12 +99,4 @@
 }
 
 @media only screen and (max-width: 800px) {
-  .project-dis-title {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .project-dis-title > h1 {
-    margin-bottom: 20px;
-  }
 }
