--- a/client/src/SectionsProjects/ProjectIntro/projectintro.css
+++ b/client/src/SectionsProjects/ProjectIntro/projectintro.css
@@ -1,6 +1,6 @@
 .project-display-top {
   width: 100%;
-  height: 200px;
+  height: 110px;
   position: relative;
 }
 
@@ -19,11 +19,12 @@
   font-size: clamp(4rem, 7vw, 8rem);
   overflow: hidden;
   transition: all 0.8s;
+  z-index: 3;
 }
 
 .project-img-display-container {
   width: 100%;
-  height: 600px;
+  height: 700px;
   color: white;
   display: flex;
   justify-content: center;
@@ -36,19 +37,19 @@
   width: auto;
   height: 100%;
   display: flex;
-  padding: 50px;
+  padding: 90px 50px;
   z-index: 2;
   font-size: clamp(5.1rem, 9vw, 9rem);
 }
 
 @media only screen and (max-width: 800px) {
   .project-img-display-container {
-    height: 500px;
+    height: 600px;
   }
   .project-img-display-container > h1 {
     width: 100%;
     justify-content: center;
-    padding: 20px 10px;
+    padding: 100px 10px;
     text-align: center;
     font-size: 4rem;
   }
