--- a/client/src/SectionsProjects/ProjectIntro/projectintro.css
+++ b/client/src/SectionsProjects/ProjectIntro/projectintro.css
@@ -49,15 +49,9 @@
   .project-img-display-container > h1 {
     width: 100%;
     justify-content: center;
-    padding: 100px 10px;
+    padding: 120px 10px;
     text-align: center;
-    font-size: 4rem;
-  }
-
-  .project-text {
-    font-size: 2rem;
-    right: 0;
-    bottom: -12px;
+    font-size: clamp(3rem, 15vw, 4rem);
   }
 
   .project-display-top {
