--- a/client/src/SectionsProjects/ProjectDisplay/projectdisplay.css
+++ b/client/src/SectionsProjects/ProjectDisplay/projectdisplay.css
@@ -24,6 +24,20 @@
 .carousel {
   margin: 0 auto;
 }
+.carousel .control-arrow {
+  opacity: 1 !important;
+  background: transparent !important;
+}
+
+.carousel .control-prev:before {
+  border-right-color: #f57c00 !important;
+  opacity: 1;
+}
+
+.carousel .control-next:before {
+  border-left-color: #f57c00 !important;
+  opacity: 1;
+}
 
 .project-display-title {
   width: 100%;
@@ -73,21 +87,13 @@
   width: 80%;
 }
 
-.project-exp-imgs {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-}
-
 .carousel-2 {
   width: 50%;
   border-radius: 10px;
 }
 
 .project-exp-img {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -128,7 +134,7 @@
 
   .project-display {
     height: fit-content;
-    padding: 10px;
+    padding: 15px;
   }
 
   .carousel-2 {
