--- a/client/src/SectionsLanding/Info/info.css
+++ b/client/src/SectionsLanding/Info/info.css
@@ -55,11 +55,16 @@
     text-align: center;
   }
 
+  .info-title > h1 {
+    font-size: 2.5rem;
+  }
+
   .info-body {
     text-align: center;
+    width: 100%;
   }
 
   .info-vector-container {
-    width: 70%;
+    width: 80%;
   }
 }
